Embeautify the map! Tests!

--- a/wardrive.html
+++ b/wardrive.html
@@ -70,7 +70,7 @@
         <div class="space-y-1 text-xs align-middle text-slate-300 mb-4">
           <label class="flex gap-2">
             <input type="checkbox" id="sendRadioNameCB">
-            Send my radio name with pings.
+            Send my radio name with pings (for leaderboard).
           </label>
         </div>
 
