--- a/wardrive.html
+++ b/wardrive.html
@@ -31,8 +31,10 @@
 
       <header class="flex items-center justify-between">
         <div>
-          <h1 class="flex items-center gap-2 text-xl font-semibold"><img class="h-8 w-8" src="content/wardrive.png" />
-            MeshCore Wardrive</h1>
+          <h1 class="flex items-center gap-2 text-xl font-semibold">
+            <img class="h-8 w-8" src="content/wardrive.png" /> MeshCore Wardrive
+            <div id="rxLogStatus" class="ml-1 border border-zinc-300 bg-zinc-500 rounded-full w-3 h-3"></div>
+          </h1>
         </div>
         <div class="text-right text-sm">
           <div><span id="status" class="font-semibold text-red-300">Disconnected</span></div>
